--- a/README
+++ b/README
@@ -1,25 +1,25 @@
-[01;34m.[00m
-├── [01;34msystem[00m
+.
+├── system
 │   └── .gitkeep
-├── [01;34muser[00m
-│   ├── [01;34mfiles[00m
-│   │   ├── [01;34m.config[00m
-│   │   │   ├── [01;34mgtk-3.0[00m
+├── user
+│   ├── files
+│   │   ├── .config
+│   │   │   ├── gtk-3.0
 │   │   │   │   └── settings.ini
-│   │   │   ├── [01;34mtermite[00m
+│   │   │   ├── termite
 │   │   │   │   └── config
 │   │   │   ├── compton.conf
 │   │   │   └── redshift.conf
-│   │   ├── [01;34m.i3[00m
-│   │   │   ├── [01;34massets[00m
-│   │   │   │   └── [01;35mbackground.png[00m
-│   │   │   ├── [01;34mscripts[00m
+│   │   ├── .i3
+│   │   │   ├── assets
+│   │   │   │   └── background.png
+│   │   │   ├── scripts
 │   │   │   │   └── i3status.py
 │   │   │   └── config
-│   │   ├── [01;34m.local[00m
-│   │   │   └── [01;34mbin[00m
-│   │   │       ├── [01;32mnvidia-off[00m
-│   │   │       └── [01;32mnvidia-status[00m
+│   │   ├── .local
+│   │   │   └── bin
+│   │   │       ├── nvidia-off
+│   │   │       └── nvidia-status
 │   │   ├── .bash_aliases
 │   │   ├── .bash_colors
 │   │   ├── .bash_logout
@@ -31,8 +31,8 @@
 │   │   ├── .vimrc
 │   │   ├── .xinitrc
 │   │   └── .Xresources
-│   ├── [01;34mscripts[00m
+│   ├── scripts
 │   │   └── Makefile
-│   ├── [01;32mdeploy.sh[00m
+│   ├── deploy.sh
 │   └── .gitignore
 └── README
